--- a/.gitignore
+++ b/.gitignore
@@ -80,11 +80,11 @@ Assets/AssetStore/
 ignore.conf
 .plastic
 
-Assets/Scripts/RobotController.cs
-Assets/Scripts/RobotController.cs.meta
-Assets/Scripts/CamDetection.cs
-Assets/Scripts/CamDetection.cs.meta
-Assets/Scripts/CamSensor.cs
-Assets/Scripts/CamSensor.cs.meta
-Assets/Scene Jawaban.unity
-Assets/Scene Jawaban.unity.meta
+# Assets/Scripts/RobotController.cs
+# Assets/Scripts/RobotController.cs.meta
+# Assets/Scripts/CamDetection.cs
+# Assets/Scripts/CamDetection.cs.meta
+# Assets/Scripts/CamSensor.cs
+# Assets/Scripts/CamSensor.cs.meta
+# Assets/Scene Jawaban.unity
+# Assets/Scene Jawaban.unity.meta
